@@ -18,9 +18,9 @@
 
 VERSION      := 3
 SUBVERSION   := 1
-MINORVERSION := 10
-TARVERSION   := 3.1.10
-LIBVERSION   := 3.1.10
+MINORVERSION := 11
+TARVERSION   := 3.1.11
+LIBVERSION   := 3.1.11
 
 ############ vars
 
