@@ -1,15 +1,15 @@
 Begin4
 Title: procps
-Version: 3.1.10
-Entered-date: 2003-06-08
+Version: 3.1.11
+Entered-date: 2003-07-14
 Description: Linux system utilities
 Keywords: procps /proc libproc sysctl pmap ps uptime tload
 	free w top vmstat watch skill snice kill pgrep pkill
 Author: Albert Cahalan, Michael K. Johnson, Jim Warner, etc.
 Maintained-by: various <procps-feedback@lists.sf.net>
 Primary-site: http://procps.sf.net/
-	239kB procps-3.1.10.tar.gz
+	242kB procps-3.1.11.tar.gz
 Alternate-site: http://www.debian.org/Packages/unstable/base/procps.html
-	239kB procps-3.1.10.tar.gz
+	242kB procps-3.1.11.tar.gz
 Copying-policy: mixed
 End
