@@ -1,3 +1,7 @@
+procps-3.1.10 --> procps-3.1.11
+
+compile with gcc 2.95 again (C99 issue)
+
 procps-3.1.9 --> procps-3.1.10
 
 handle GPLONLY_ symbols                       #143549 #188374
